deployment/dev/minio/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-dev
  namespace: default
  labels:
    app: minio-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-dev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio-dev
    spec:
      containers:
        - image: mailhog/mailhog:v1.0.1
          imagePullPolicy: Always
          name: mailhog  
        - image: minio/minio:RELEASE.2024-10-29T16-01-48Z
          imagePullPolicy: Always
          name: minio  
          workingDir: /data
          ports:
            - containerPort: 9001
            - containerPort: 9000
          args:
            - server
            - --console-address
            - :9001
            - --address
            - :9000
            - /data
      restartPolicy: Always
