deployment/dev/minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-dev
  namespace: default
  # annotations:
  #   cert-manager.io/cluster-issuer: k8s-tls-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: minio.localdev.me
    http:
      paths:
      - backend:
          service:
            name: minio-dev
            port:
              name: port-9000
        path: /
        pathType: Prefix
  - host: minio-api.localdev.me
    http:
      paths:
      - backend:
          service:
            name: minio-dev
            port:
              name: port-9001
        path: /
        pathType: Prefix
  - host: mailhog.localdev.me
    http:
      paths:
      - backend:
          service:
            name: prefect-k8s
            port:
              name: port-8025
        path: /
        pathType: Prefix
  # tls:
  # - hosts:
  #   - 'minio.localdev.me'
  #   - 'minio-api.localdev.me'
  #   - 'mailhog.localdev.me'
  #   secretName: minio-dev-tls-secret
